WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108719
[chromium] Flings should not bubble up to enclosing scrollables when main-thread touch scrolling
https://bugs.webkit.org/show_bug.cgi?id=108719
Summary
[chromium] Flings should not bubble up to enclosing scrollables when main-thr...
Terry Anderson
Reported
2013-02-01 15:53:30 PST
Flings should not bubble up to enclosing scrollables when main-thread touch scrolling.
Attachments
WIP
(42.71 KB, patch)
2013-02-01 15:56 PST
,
Terry Anderson
no flags
Details
Formatted Diff
Diff
Patch
(1.80 KB, patch)
2013-02-04 13:12 PST
,
Terry Anderson
no flags
Details
Formatted Diff
Diff
Patch
(1.82 KB, patch)
2013-02-06 13:45 PST
,
Terry Anderson
no flags
Details
Formatted Diff
Diff
Patch
(1.91 KB, patch)
2013-02-06 17:09 PST
,
Terry Anderson
no flags
Details
Formatted Diff
Diff
Patch
(1.79 KB, patch)
2013-02-07 06:45 PST
,
Terry Anderson
no flags
Details
Formatted Diff
Diff
Patch
(1.83 KB, patch)
2013-02-07 14:04 PST
,
Terry Anderson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Terry Anderson
Comment 1
2013-02-01 15:56:20 PST
Created
attachment 186177
[details]
WIP
WebKit Review Bot
Comment 2
2013-02-01 16:01:06 PST
Please wait for approval from
abarth@webkit.org
,
dglazkov@chromium.org
,
fishd@chromium.org
,
jamesr@chromium.org
or
tkent@chromium.org
before submitting, as this patch contains changes to the Chromium public API. See also
https://trac.webkit.org/wiki/ChromiumWebKitAPI
.
Robert Kroeger
Comment 3
2013-02-04 12:03:08 PST
FWIW: the fling code in WebViewImpl and related event changes look good to me.
Terry Anderson
Comment 4
2013-02-04 13:12:29 PST
Created
attachment 186445
[details]
Patch
WebKit Review Bot
Comment 5
2013-02-04 13:21:30 PST
Comment on
attachment 186445
[details]
Patch
Attachment 186445
[details]
did not pass cr-linux-debug-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/16374325
WebKit Review Bot
Comment 6
2013-02-04 14:07:08 PST
Comment on
attachment 186445
[details]
Patch
Attachment 186445
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/16371423
Peter Beverloo (cr-android ews)
Comment 7
2013-02-04 14:28:13 PST
Comment on
attachment 186445
[details]
Patch
Attachment 186445
[details]
did not pass cr-android-ews (chromium-android): Output:
http://queues.webkit.org/results/16378284
Terry Anderson
Comment 8
2013-02-06 13:45:46 PST
Created
attachment 186912
[details]
Patch
Peter Beverloo (cr-android ews)
Comment 9
2013-02-06 14:15:31 PST
Comment on
attachment 186912
[details]
Patch
Attachment 186912
[details]
did not pass cr-android-ews (chromium-android): Output:
http://queues.webkit.org/results/16394390
Terry Anderson
Comment 10
2013-02-06 17:09:19 PST
Created
attachment 186953
[details]
Patch
Terry Anderson
Comment 11
2013-02-07 06:45:36 PST
Created
attachment 187091
[details]
Patch
Eric Seidel (no email)
Comment 12
2013-02-07 13:10:32 PST
Looks very reasonable. :) How does one test this?
Build Bot
Comment 13
2013-02-07 13:33:36 PST
Comment on
attachment 187091
[details]
Patch
Attachment 187091
[details]
did not pass win-ews (win): Output:
http://queues.webkit.org/results/16428331
Terry Anderson
Comment 14
2013-02-07 13:57:22 PST
(In reply to
comment #12
)
> Looks very reasonable. :) How does one test this?
I have tested the behavior of the new event type GestureScrollUpdateWithoutPropagation in isolation for
https://bugs.webkit.org/show_bug.cgi?id=108849
, and testing fling itself (such as in fast/events/touch/gesture/pad-gesture-fling.html) is notoriously flaky.
Terry Anderson
Comment 15
2013-02-07 14:04:04 PST
Created
attachment 187173
[details]
Patch
Eric Seidel (no email)
Comment 16
2013-02-07 14:32:14 PST
Comment on
attachment 187173
[details]
Patch I worry w/o automated testing this will break again. :(
Terry Anderson
Comment 17
2013-02-07 14:48:11 PST
(In reply to
comment #16
)
> (From update of
attachment 187173
[details]
) > I worry w/o automated testing this will break again. :(
I definitely agree that some reliable automated testing for fling gestures would be welcome (but in speaking with @rjkroege, this will likely require a substantial effort to make robust). I have filed
https://bugs.webkit.org/show_bug.cgi?id=109234
to track.
WebKit Review Bot
Comment 18
2013-02-07 16:05:22 PST
Comment on
attachment 187173
[details]
Patch Clearing flags on attachment: 187173 Committed
r142197
: <
http://trac.webkit.org/changeset/142197
>
WebKit Review Bot
Comment 19
2013-02-07 16:05:29 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug