[chromium] Flings should not bubble up to enclosing scrollables when main-thread touch scrolling https://bugs.webkit.org/show_bug.cgi?id=108719

Reviewed by Eric Seidel.

In the event of a main-thread touch fling, dispatch a series of
GestureScrollUpdateWithoutPropagation events defined in
https://bugs.webkit.org/show_bug.cgi?id=108849 (instead of
GestureScrollUpdate events) so that the fling does not
propagate to enclosing scrollables.

* src/WebViewImpl.cpp:
(WebKit::WebViewImpl::scrollBy):


Canonical link: https://commits.webkit.org/127441@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142197 268f45cc-cd09-0410-ab3c-d52691b4dbfc